--- a/king-generator/src/main/resources/vm/single/java/Pojo.java.vm
+++ b/king-generator/src/main/resources/vm/single/java/Pojo.java.vm
@@ -1,10 +1,10 @@
-package com.mathedu.pojo;
+package ${table.packageName}.pojo;
 
 import lombok.Data;
 
 @Data
-public class ${pojoName} {
-#foreach(${element} in ${pojoAttrs})
-    private ${element.typeStr} ${element.field};
+public class ${table.className} {
+#foreach(${element} in ${table.columns})
+    private ${element.javaType} ${element.columnName};
 #end
 }
