--- a/king-generator/src/main/resources/vm/single/java/Pojo.java.vm
+++ b/king-generator/src/main/resources/vm/single/java/Pojo.java.vm
@@ -4,7 +4,13 @@ import lombok.Data;
 
 @Data
 public class ${table.className} {
+    private String id;
 #foreach(${element} in ${table.columns})
     private ${element.javaType} ${element.columnName};
 #end
+    private String createUserId;
+    private String updateUserId;
+    private String createTime;
+    private String updateTime;
+    private Integer deleteFlag;
 }
